--- a/src/components/SelectCustom/SelectCustom.module.css
+++ b/src/components/SelectCustom/SelectCustom.module.css
@@ -1,7 +1,10 @@
 .select_custom {
+    width: max-content;
+    min-width: 250px;
+    position: relative;
     border: 1px solid #dedede;
     cursor: pointer;
-    margin-top: 20px;
+    margin: 50px auto;
 }
 .select_custom .element {
     padding: 8px 10px;
@@ -12,6 +15,17 @@
 .select_custom .element.hover {
     color: #fff;
     background: #1E66E4;
+}
+.select_custom .all_elements {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 100%;
+    background: #fff;
+}
+.select_custom.active .all_elements {
+    border: 1px solid #959595;
+    z-index: 10;
 }
 .select_custom .all_elements .element:first-of-type {
     border-top: 1px solid #dedede;
